# rustdesk

./: .gitignore  Cargo.toml  README.md  build.py  entrypoint
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml
.github/workflows/: flutter-build.yml  history.yml  (+2 more)
appimage/: AppImageBuilder-aarch64.yml  AppImageBuilder-x86_64.yml
docs/: CODE_OF_CONDUCT-NL.md  CODE_OF_CONDUCT-PL.md  CODE_OF_CONDUCT-RU.md  CODE_OF_CONDUCT-TR.md  CODE_OF_CONDUCT.md  CONTRIBUTING-DE.md  CONTRIBUTING-ID.md  CONTRIBUTING-IT.md  CONTRIBUTING-NL.md  CONTRIBUTING-PL.md  CONTRIBUTING-RU.md  CONTRIBUTING-TR.md  CONTRIBUTING.md  README-AR.md  README-CS.md  README-DA.md  README-DE.md  README-EO.md  README-ES.md  README-FA.md  README-FI.md  README-FR.md  README-GR.md  README-HU.md  README-ID.md  README-IT.md  README-JP.md  README-KR.md  README-ML.md  README-NL.md  README-PL.md  README-PTBR.md  README-RU.md  README-TR.md  README-UA.md  README-VN.md  README-ZH.md  SECURITY-DE.md  SECURITY-IT.md  SECURITY-NL.md  (+3 more)
flatpak/: rustdesk.json
flutter/: .gitignore  deploy.sh  pubspec.yaml
res/: PKGBUILD  com.rustdesk.RustDesk.policy  osx-dist.sh  pacman_install  rpm-flutter-suse.spec  rpm-flutter.spec  rpm-suse.spec  rpm.spec  rustdesk-link.desktop  rustdesk.desktop  rustdesk.service  setup.nsi
src/: client.rs  common.rs  core_main.rs  flutter.rs  keyboard.rs  lan.rs  license.rs  main.rs  naming.rs  privacy_win_mag.rs  tray.rs  ui.rs  ui_interface.rs  ui_session_interface.rs  virtual_display_manager.rs
vdi/host/: Cargo.toml  README.md
vdi/host/src/: main.rs  server.rs
(+152 files in other folders)
