[package]
name = "qemu-OABRemoteDesk"
version = "0.1.0"
authors = ["OABRemoteDesk <info@OABRemoteDesk.com>"]
edition = "2021"

[dependencies]
qemu-display = { git = "https://github.com/OABRemoteDesk/qemu-display" }
hbb_common = { path = "../../libs/hbb_common" }
clap = { version = "4.1", features = ["derive"] }
zbus = { version = "3.0" }
image = "0.24"
async-trait = "0.1"
